<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastrar_Turmas">

    <!-- Conteúdo principal envolvido por NestedScrollView para permitir rolagem vertical -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            tools:layout_editor_absoluteX="-9dp"
            tools:layout_editor_absoluteY="84dp">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="417dp"
                android:layout_height="273dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="150dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="14dp"
                    android:src="@drawable/nome_escola_padawan" />

                <TextView
                    android:id="@+id/tit1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="120dp"
                    android:fontFamily="@font/jockeyoneregular"
                    android:text="@string/tit1"
                    android:textColor="#5271FF"
                    android:textSize="42sp" />

                <TextView
                    android:id="@+id/tit2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="120dp"
                    android:fontFamily="@font/jockeyoneregular"
                    android:text="@string/tit2"
                    android:textColor="#929292"
                    android:textSize="42sp" />

                <TextView
                    android:id="@+id/tit3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="170dp"
                    android:fontFamily="@font/jockeyoneregular"
                    android:text="@string/tit3"
                    android:textColor="#929292"
                    android:textSize="42sp" />

            </FrameLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_nome_turma"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <EditText
                android:id="@+id/input_nome"
                android:layout_width="359dp"
                android:layout_height="46dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/input_cadastro"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_tutor_responsavel"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_nome" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_prof_Turma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="9dp"
                android:text="@string/label_lista_alunos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_prof_Turma" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_aluno_turma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/label_turno"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_aluno_turma" />

            <RadioGroup
                android:id="@+id/radioGroupTurno"
                android:layout_width="370dp"
                android:layout_height="94dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_cadastro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <RadioButton
                    android:id="@+id/op_mat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/op_matutino" />

                <RadioButton
                    android:id="@+id/op_vesp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/op_vespertino" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_editar"
                android:layout_width="105dp"
                android:layout_height="42dp"
                android:layout_marginStart="280dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="#FACC56"
                android:text="@string/btn_salvar"
                android:textColor="#5271FF"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupTurno" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.drawerlayout.widget.DrawerLayout>
